--- a/GreenMakerLab/package.json
+++ b/GreenMakerLab/package.json
@@ -11,9 +11,13 @@
   },
   "dependencies": {
     "framer-motion": "^11.11.9",
+    "i18next": "^24.2.1",
+    "i18next-browser-languagedetector": "^8.0.2",
+    "i18next-http-backend": "^3.0.1",
     "package.json": "file:",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-i18next": "^15.4.0",
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.26.2"
   },
